@@ -1,3 +1,8 @@
+gImageReader 3.1.1 (Jun 04 2015):
+ * Fix titlebar now shown when window maximized in Gnome 3
+ * New translations: Chinese (Hong Kong), Chinese (Taiwan)
+ * Updated translations: Russian, Portoguese
+
 gImageReader 3.1 (May 1 2015):
  * Add option to draw whitespace
  * Allow searching and replacing only in selected portion of output text
